--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -463,8 +463,7 @@ nav .hero_section img {
     width: 100%;
 }
 .abtcmpy_innerContainer {
-    display: flex
-;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -1984,4 +1983,30 @@ textarea {
     .slide-track {
       width: calc(100px * 18);
     }
+  }
+
+
+  /*------------casestudy--------------------------*/
+  .case_studies{
+    width: 100%;
+    height: 100vh;
+  }
+  .case_studies img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+  }
+  .case_studies .inner_container{
+    padding: 3rem 3.75rem 3rem 3.75rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .dscrpt_Container .header_container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 0.8rem;
   }
