img chnaged in home

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,103 +7,103 @@
     --h-1-letter-spacing: 0px;
     --h-1-line-height: 56px;
     --h-1-font-style: normal;
-    --h-2-font-family: "Archivo", Helvetica;
+    --h-2-font-family: "IBM Plex Sans", sans-serif;
     --h-2-font-weight: 600;
     --h-2-font-size: 36px;
     --h-2-letter-spacing: 0px;
     --h-2-line-height: 48px;
     --h-2-font-style: normal;
-    --h-3-font-family: "Archivo", Helvetica;
+    --h-3-font-family: "IBM Plex Sans", sans-serif;
     --h-3-font-weight: 600;
     --h-3-font-size: 36px;
     --h-3-letter-spacing: 0px;
     --h-3-line-height: 33.599998474121094px;
     --h-3-font-style: normal;
-    --h-4-font-family: "Archivo", Helvetica;
+    --h-4-font-family: "IBM Plex Sans", sans-serif;
     --h-4-font-weight: 600;
     --h-4-font-size: 28px;
     --h-4-letter-spacing: 0px;
     --h-4-line-height: 30px;
     --h-4-font-style: normal;
-    --h-5-font-family: "Archivo", Helvetica;
+    --h-5-font-family: "IBM Plex Sans", sans-serif;
     --h-5-font-weight: 400;
     --h-5-font-size: 24px;
     --h-5-letter-spacing: 0px;
     --h-5-line-height: normal;
     --h-5-font-style: normal;
-    --h-6-font-family: "Archivo", Helvetica;
+    --h-6-font-family: "IBM Plex Sans", sans-serif;
     --h-6-font-weight: 400;
     --h-6-font-size: 20px;
     --h-6-letter-spacing: 0px;
     --h-6-line-height: 23.799999237060547px;
     --h-6-font-style: normal;
-    --body-font-family: "Archivo", Helvetica;
+    --body-font-family: "IBM Plex Sans", sans-serif;
     --body-font-weight: 600;
     --body-font-size: 18px;
     --body-letter-spacing: 0px;
     --body-line-height: 24px;
     --body-font-style: normal;
-    --small-font-family: "Archivo", Helvetica;
+    --small-font-family: "IBM Plex Sans", sans-serif;
     --small-font-weight: 500;
     --small-font-size: 16px;
     --small-letter-spacing: 0px;
     --small-line-height: 20px;
     --small-font-style: normal;
-    --tiny-font-family: "Archivo", Helvetica;
+    --tiny-font-family: "IBM Plex Sans", sans-serif;
     --tiny-font-weight: 500;
     --tiny-font-size: 14px;
     --tiny-letter-spacing: 0px;
     --tiny-line-height: 16px;
     --tiny-font-style: normal;
-    --p-font-family: "Archivo", Helvetica;
+    --p-font-family: "IBM Plex Sans", sans-serif;
     --p-font-weight: 400;
     --p-font-size: 20px;
     --p-letter-spacing: 0px;
     --p-line-height: normal;
     --p-font-style: normal;
-    --xs-font-family: "Archivo", Helvetica;
+    --xs-font-family: "IBM Plex Sans", sans-serif;
     --xs-font-weight: 400;
     --xs-font-size: 12px;
     --xs-letter-spacing: 0px;
     --xs-line-height: 125%;
     --xs-font-style: normal;
-    --sm-font-family: "Archivo", Helvetica;
+    --sm-font-family: "IBM Plex Sans", sans-serif;
     --sm-font-weight: 400;
     --sm-font-size: 14px;
     --sm-letter-spacing: 0px;
     --sm-line-height: 125%;
     --sm-font-style: normal;
-    --base-font-family: "Archivo", Helvetica;
+    --base-font-family: "IBM Plex Sans", sans-serif;
     --base-font-weight: 400;
     --base-font-size: 16px;
     --base-letter-spacing: 0px;
     --base-line-height: 150%;
     --base-font-style: normal;
-    --lg-font-family: "Archivo", Helvetica;
+    --lg-font-family: "IBM Plex Sans", sans-serif;
     --lg-font-weight: 400;
     --lg-font-size: 18px;
     --lg-letter-spacing: 0px;
     --lg-line-height: normal;
     --lg-font-style: normal;
-    --xl-font-family: "Archivo", Helvetica;
+    --xl-font-family: "IBM Plex Sans", sans-serif;
     --xl-font-weight: 400;
     --xl-font-size: 20px;
     --xl-letter-spacing: 0px;
     --xl-line-height: normal;
     --xl-font-style: normal;
-    --2xl-m-font-family: "Archivo", Helvetica;
+    --2xl-m-font-family: "IBM Plex Sans", sans-serif;
     --2xl-m-font-weight: 500;
     --2xl-m-font-size: 22px;
     --2xl-m-letter-spacing: 0px;
     --2xl-m-line-height: normal;
     --2xl-m-font-style: normal;
-    --3xl-sm-font-family: "Archivo", Helvetica;
+    --3xl-sm-font-family: "IBM Plex Sans", sans-serif;
     --3xl-sm-font-weight: 600;
     --3xl-sm-font-size: 64px;
     --3xl-sm-letter-spacing: 0px;
     --3xl-sm-line-height: normal;
     --3xl-sm-font-style: normal;
-    --4xl-b-font-family: "Archivo", Helvetica;
+    --4xl-b-font-family: "IBM Plex Sans", sans-serif;
     --4xl-b-font-weight: 700;
     --4xl-b-font-size: 64px;
     --4xl-b-letter-spacing: 0px;
@@ -115,7 +115,7 @@
     --formheader-letter-spacing: 0px;
     --formheader-line-height: normal;
     --formheader-font-style: normal;
-    --sm-24-font-family: "Archivo", Helvetica;
+    --sm-24-font-family: "IBM Plex Sans", sans-serif;
     --sm-24-font-weight: 600;
     --sm-24-font-size: 24px;
     --sm-24-letter-spacing: 0px;
@@ -208,7 +208,7 @@
     --vagtha-1-radius-m: 10px;
     --vagtha-1-neutrals-neutrals200: rgba(207, 206, 206, 1);
     --vagtha-1-spacing-xs: 4px;
-    --btn-font-font-family: "Archivo", Helvetica;
+    --btn-font-font-family: "IBM Plex Sans", sans-serif;
 --btn-font-font-weight: 700;
 --btn-font-font-size: 24px;
 --btn-font-letter-spacing: 0px;
