--- a/assets/css/case.css
+++ b/assets/css/case.css
@@ -385,10 +385,23 @@ mark{
 .card-date {
     color: #888;
     font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.2rem 0.8rem;
+    border: 1px #a000a0 solid;
+    border-radius: 24px;
+    gap: 1.2rem;
 }
-
+.leads_continaer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.3rem;
+}
 .read-more {
-    color: #ff8c00;
+    color: #e10505;
     text-decoration: none;
     font-weight: 500;
     display: flex;
